# obsidian-kanban-parser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  api-changes.md  justfile  pyproject.toml
.claude/: settings.local.json
memory/: MEMORY.md  feedback_test_helpers_aaa.md
src/obsidian_kanban_parser/: __init__.py  data_manipulation.py  domain.py  parser.py  writer.py
src/obsidian_kanban_parser/utils/: parsing_utils.py
tests/: helpers.py  test_archive.py  test_frontmatter.py  test_frontmatter_settings.py  test_helper.py  test_high_level_smoketest.py  test_inline_fields.py  test_lane_operations.py  test_round_trip.py  test_search.py  test_settings.py  test_smoketests.py  test_subtasks.py  test_tags.py  test_task_lifecycle.py
tests/resources/: full-board.md  item-with-text-complex-tasks.md  item-with-text-description-and-subtasks.md  item-with-text-description.md
